--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,15 @@ input {
   margin-top: 1rem;
   margin-left: 0.5rem;
 }
+
+.code {
+  color: #9163f2;
+}
+
+.const {
+  color: red;
+}
+
+.code-color {
+  color: indigo;
+}
